--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+:root {
+  --white: #FFF;
+  --gray: #f1f1f1;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +15,57 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.calc {
+  background-image: linear-gradient(to bottom right, rgba(176, 69, 185, 0.795), rgba(88, 169, 235, 0.897)), url('https://images.pexels.com/photos/853199/pexels-photo-853199.jpeg');
+  background-position: center;
+  background-size: cover;
+  min-height: 100vh;
+  position: relative;
+}
+
+.layout {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -40%);
+}
+.white {
+  color: var(--white);
+}
+
+.result {
+  position: absolute;
+  top: 15%;
+  left: 50%;
+  transform: translate(-50%, -10%);
+}
+.result .title {
+  color: var(--white);
+  text-decoration: underline;
+  text-underline-position: under;
+  text-underline-offset: 0.3em;
+}
+
+.panel-block {
+  background-color: #f5f5f5;
+}
+
+.table {
+  min-width: 16vw;
+}
+.table td {
+  width: 20%;
+  vertical-align: middle;
+}
+
+.table td:hover {
+  background-color: var(--gray);
+}
+.table td:last-child:hover {
+  background-color: transparent;
+}
+.table td:last-child>button:hover {
+  background-color: initial;
 }
